[gd_scene load_steps=3 format=3 uid="uid://badi3jprti6bb"]

[ext_resource type="Script" path="res://scenes/player/ui/checkpoint_time_display/checkpoint_time_display.gd" id="1_gk7vw"]

[sub_resource type="LabelSettings" id="LabelSettings_x2m8o"]
font_size = 32

[node name="CheckpointTimeDisplay" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -24.0
offset_right = 103.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gk7vw")

[node name="CurrentCheckpointTime" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "00:00:00:0000"
label_settings = SubResource("LabelSettings_x2m8o")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PrecedentTimeDelta" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "-00:00:00:0000"

[node name="Spacer" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BestTimeDelta" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-00:00:00:0000"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
